<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/gamesFragment"
        android:icon="@drawable/ic_games"
        android:title="@string/games_title" />
    <item
        android:id="@+id/playersFragment"
        android:icon="@drawable/ic_players"
        android:title="@string/players_title" />
    <item
        android:id="@+id/addFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_button" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_stats"
        android:title="@string/stats_title" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>